@startuml
class TimeSlot {
    + void markSlotFree(int)
    + void markSlotBusy(int)
    + int findFreeSlot()
}

class SpaceSlot {
    + void markSlotFree(int)
    + void markSlotBusy(int)
    + int findFreeSlot()
}

class ResourceAllocator {
    - {static} int INVALID_RESOURCE_ID
    + int allocate(Resource)
    + void free(Resource, int)
}

interface Resource {
    + void markSlotFree(int)
    + void markSlotBusy(int)
    + int findFreeSlot()
}

Resource <|.. TimeSlot
Resource <|.. SpaceSlot
ResourceAllocator --> Resource
@enduml